--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -7,7 +7,8 @@ services:
     depends_on:
     - db
     environment:
-      - DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}"
+      - DATABASE_URL=postgresql+psycopg://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
+
   db:
     image: postgres:15
     environment:
